--- a/sass/css.css
+++ b/sass/css.css
@@ -6,12 +6,12 @@
   position: fixed;
   top: 0;
   bottom: 0;
-  max-width: 750px;
+  max-width: 700px;
   right: 0;
   fill: #fff;
 }
 .pin svg {
-  height: 350px;
+  height: 325px;
 }
 
 .plane {
@@ -274,12 +274,24 @@
   animation-delay: 6.2s;
 }
 
+h1 {
+  font-family: proxima-nova, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+p {
+  font-family: proxima-nova, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   background-color: #3c2a66;
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -288,10 +300,20 @@ body {
 }
 
 .left {
-  max-width: 490px;
+  margin-top: 20%;
+  padding: 100px 50px;
+  max-width: 500px;
+  border-right: solid 1px #fff;
 }
 .left img {
-  height: 90px;
+  height: 200px;
+}
+
+.right {
+  margin-top: 20%;
+  padding: 100px 50px;
+  max-width: 500px;
+  text-align: center;
 }
 
 /*# sourceMappingURL=css.css.map */
