--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,4 +1,5 @@
 @import'plane';
+@import'fonts';
 
 $purple: #3c2a66;
 
@@ -7,7 +8,7 @@ body {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -16,9 +17,18 @@ body {
 }
 
 .left {
-    max-width:490px; 
+    margin-top: 20%;
+    padding: 100px 50px;
+    max-width:500px; 
+    border-right: solid 1px #fff;
     img {
-       height: 90px; 
+       height: 200px; 
     }
-    
+}
+
+.right {
+    margin-top: 20%;
+    padding: 100px 50px;
+    max-width:500px; 
+    text-align: center;
 }
