--- a/sass/plane.scss
+++ b/sass/plane.scss
@@ -1,276 +1,225 @@
-.plane-svg {
-    fill: #fff;
-}
-
-.pin {
-    position: fixed;
-    top: 0; 
-    bottom: 0;
-    max-width: 700px;
-    right: 0;
-    fill: #fff;
-    svg {
-        height: 325px;
-    }
-    
-}
-
 .plane {
-    animation-delay: 6.4s;
+    margin-top: 250px;
+    fill: #fff;
+    width: 25vw;
+    svg {
+        height: 380px;
+        width: 95%;
+    }
 }
 
-.layer5 {
-    animation-delay: .1s;
-}
-
-.layer6 {
-    animation-delay: .2s;
-}
-
-.layer7 {
-    animation-delay: .3s;
-}
-
-.layer8 {
-    animation-delay: .4s;
-}
-
-.layer9 {
-    animation-delay: .5s;
-}
-
-.layer10 {
-    animation-delay: .6s;
-}
-
-.layer11 {
-    animation-delay: .7s;
-}
-
-.layer12 {
-    animation-delay: .8s;
-}
-
-.layer13 {
-    animation-delay: .9s;
-}
-
-.layer14 {
-    animation-delay: 1s;
-}
-
-.layer15 {
-    animation-delay: 1.1s;
-}
-
-.layer16 {
-    animation-delay: 1.2s;
-}
-
-.layer17 {
-    animation-delay: 1.3s;
-}
-
-.layer18 {
-    animation-delay: 1.4s;
-}
-
-.layer19 {
-    animation-delay: 1.5s;
-}
-
-.layer20 {
-    animation-delay: 1.6s;
-}
-
-.layer21 {
-    animation-delay: 1.7s;
-}
-
-.layer22 {
-    animation-delay: 1.8s;
-}
-
-.layer23 {
-    animation-delay: 1.9s;
-}
-
-.layer24 {
-    animation-delay: 2s;
-}
-
-.layer25 {
-    animation-delay: 2.1s;
-}
-
-.layer26 {
-    animation-delay: 2.2s;
-}
-
-.layer27 {
-    animation-delay: 2.3s;
-}
-
-.layer28 {
-    animation-delay: 2.4s;
-}
-
-.layer29 {
-    animation-delay: 2.5s;
-}
-
-.layer30 {
-    animation-delay: 2.6s;
-}
-
-.layer31 {
-    animation-delay: 2.7s;
-}
-
-.layer32 {
-    animation-delay: 2.8s;
-}
-
-.layer33 {
-    animation-delay: 2.9s;
-}
-
-.layer34 {
-    animation-delay: 2.9s;
-}
-
-.layer35 {
-    animation-delay: 3s;
-}
-
-.layer36 {
-    animation-delay: 3.1s;
-}
-
-.layer37 {
-    animation-delay: 3.2s;
-}
-
-.layer38 {
-    animation-delay: 3.3s;
-}
-
-.layer39 {
-    animation-delay: 3.4s;
-}
-
-.layer40 {
-    animation-delay: 3.5s;
-}
-
-.layer41 {
-    animation-delay: 3.6s;
-}
-
-.layer42 {
-    animation-delay: 3.7s;
-}
-
-.layer43 {
-    animation-delay: 3.8s;
-}
-
-.layer44 {
-    animation-delay: 3.9s;
-}
-
-.layer45 {
-    animation-delay: 3.9s;
-}
-
-.layer46 {
+.Layer_18_1_ {
     animation-delay: 4s;
 }
 
-.layer47 {
+.Layer_19_1_ {
     animation-delay: 4.1s;
 }
 
-.layer48 {
+.Layer_20_1_ {
     animation-delay: 4.2s;
 }
 
-.layer49 {
+.Layer_21_1_ {
     animation-delay: 4.3s;
 }
 
-.layer50 {
+.Layer_22_1_ {
     animation-delay: 4.4s;
 }
 
-.layer51 {
+.Layer_23_1_ {
     animation-delay: 4.5s;
 }
 
-.layer52 {
+.Layer_24_1_ {
+    animation-delay: 4.5s;
+}
+
+.Layer_25_1_ {
     animation-delay: 4.6s;
 }
 
-.layer53 {
+.Layer_26_1_ {
     animation-delay: 4.7s;
 }
 
-.layer54 {
+.Layer_27_1_ {
     animation-delay: 4.8s;
 }
 
-.layer55 {
+.Layer_28_1_ {
     animation-delay: 4.9s;
 }
 
-.layer56 {
+.Layer_29_1_ {
     animation-delay: 5s;
 }
 
-.layer57 {
+.Layer_30_1_ {
     animation-delay: 5.1s;
 }
 
-.layer58 {
+.Layer_31_1_ {
     animation-delay: 5.2s;
 }
 
-.layer59 {
+.Layer_32_1_ {
     animation-delay: 5.3s;
 }
 
-.layer60 {
+.Layer_33_1_ {
     animation-delay: 5.4s;
 }
 
-.layer61 {
+.Layer_34_1_ {
     animation-delay: 5.5s;
 }
 
-.layer62 {
+.Layer_35_1_ {
     animation-delay: 5.6s;
 }
 
-.layer63 {
+.Layer_36_1_ {
+    animation-delay: 5.5s;
+}
+
+.Layer_37 {
+    animation-delay: 5.6s;
+}
+
+.Layer_38 {
     animation-delay: 5.7s;
 }
 
-.layer64 {
+.Layer_39 {
     animation-delay: 5.8s;
 }
 
-.layer65 {
+.Layer_40 {
     animation-delay: 5.9s;
 }
 
-.layer66 {
+.Layer_41 {
     animation-delay: 6s;
 }
 
-.layer67 {
+.Layer_42 {
     animation-delay: 6.1s;
 }
 
-.layer68 {
+.Layer_43 {
     animation-delay: 6.2s;
 }
+
+.Layer_44 {
+    animation-delay: 6.3s;
+}
+
+.Layer_45 {
+    animation-delay: 6.4s;
+}
+
+.Layer_46 {
+    animation-delay: 6.5s;
+}
+
+.Layer_47 {
+    animation-delay: 6.6s;
+}
+
+.Layer_48 {
+    animation-delay: 6.7s;
+}
+
+.Layer_49 {
+    animation-delay: 6.8s;
+}
+
+.Layer_50 {
+    animation-delay: 6.9s;
+}
+
+.Layer_51 {
+    animation-delay: 7s;
+}
+
+.Layer_52 {
+    animation-delay: 7.1s;
+}
+
+.Layer_53 {
+    animation-delay: 7.2s;
+}
+
+.Layer_54 {
+    animation-delay: 7.3s;
+}
+
+.Layer_55 {
+    animation-delay: 7.4s;
+}
+
+.Layer_56 {
+    animation-delay: 7.5s;
+}
+
+.Layer_57 {
+    animation-delay: 7.6s;
+}
+
+.Layer_58 {
+    animation-delay: 7.7s;
+}
+
+.Layer_59 {
+    animation-delay: 7.8s;
+}
+
+.Layer_60 {
+    animation-delay: 7.9s;
+}
+
+.Layer_61 {
+    animation-delay: 8s;
+}
+
+.Layer_62 {
+    animation-delay: 8.1s;
+}
+
+.Layer_63 {
+    animation-delay: 8.2s;
+}
+
+.Layer_64 {
+    animation-delay: 8.3s;
+}
+
+.Layer_65 {
+    animation-delay: 8.4s;
+}
+
+.Layer_66 {
+    animation-delay: 8.5s;
+}
+
+.Layer_67 {
+    animation-delay: 8.6s;
+}
+
+.Layer_68 {
+    animation-delay: 8.7s;
+}
+
+.Layer_3_1_ {
+    animation-delay: 8.8s;
+}
+
+
+
+
+
+
+
+
