--- a/sass/css.css
+++ b/sass/css.css
@@ -9,211 +9,211 @@
 }
 
 .Layer_18_1_ {
-  animation-delay: 4s;
+  animation-delay: 2.3s;
 }
 
 .Layer_19_1_ {
-  animation-delay: 4.1s;
+  animation-delay: 2.35s;
 }
 
 .Layer_20_1_ {
-  animation-delay: 4.2s;
+  animation-delay: 2.4s;
 }
 
 .Layer_21_1_ {
-  animation-delay: 4.3s;
+  animation-delay: 2.45s;
 }
 
 .Layer_22_1_ {
-  animation-delay: 4.4s;
+  animation-delay: 2.5s;
 }
 
 .Layer_23_1_ {
-  animation-delay: 4.5s;
+  animation-delay: 2.55s;
 }
 
 .Layer_24_1_ {
-  animation-delay: 4.5s;
+  animation-delay: 2.6s;
 }
 
 .Layer_25_1_ {
-  animation-delay: 4.6s;
+  animation-delay: 2.65s;
 }
 
 .Layer_26_1_ {
-  animation-delay: 4.7s;
+  animation-delay: 2.7s;
 }
 
 .Layer_27_1_ {
-  animation-delay: 4.8s;
+  animation-delay: 2.75s;
 }
 
 .Layer_28_1_ {
-  animation-delay: 4.9s;
+  animation-delay: 2.8s;
 }
 
 .Layer_29_1_ {
-  animation-delay: 5s;
+  animation-delay: 2.85s;
 }
 
 .Layer_30_1_ {
-  animation-delay: 5.1s;
+  animation-delay: 2.9s;
 }
 
 .Layer_31_1_ {
-  animation-delay: 5.2s;
+  animation-delay: 2.95s;
 }
 
 .Layer_32_1_ {
-  animation-delay: 5.3s;
+  animation-delay: 3s;
 }
 
 .Layer_33_1_ {
-  animation-delay: 5.4s;
+  animation-delay: 3.05s;
 }
 
 .Layer_34_1_ {
-  animation-delay: 5.5s;
+  animation-delay: 3.1s;
 }
 
 .Layer_35_1_ {
-  animation-delay: 5.6s;
+  animation-delay: 3.15s;
 }
 
 .Layer_36_1_ {
-  animation-delay: 5.5s;
+  animation-delay: 3.2s;
 }
 
 .Layer_37 {
-  animation-delay: 5.6s;
+  animation-delay: 3.25s;
 }
 
 .Layer_38 {
-  animation-delay: 5.7s;
+  animation-delay: 3.3s;
 }
 
 .Layer_39 {
-  animation-delay: 5.8s;
+  animation-delay: 3.35s;
 }
 
 .Layer_40 {
-  animation-delay: 5.9s;
+  animation-delay: 3.4s;
 }
 
 .Layer_41 {
-  animation-delay: 6s;
+  animation-delay: 3.45s;
 }
 
 .Layer_42 {
-  animation-delay: 6.1s;
+  animation-delay: 3.5s;
 }
 
 .Layer_43 {
-  animation-delay: 6.2s;
+  animation-delay: 3.55s;
 }
 
 .Layer_44 {
-  animation-delay: 6.3s;
+  animation-delay: 3.6s;
 }
 
 .Layer_45 {
-  animation-delay: 6.4s;
+  animation-delay: 3.65s;
 }
 
 .Layer_46 {
-  animation-delay: 6.5s;
+  animation-delay: 3.7s;
 }
 
 .Layer_47 {
-  animation-delay: 6.6s;
+  animation-delay: 3.75s;
 }
 
 .Layer_48 {
-  animation-delay: 6.7s;
+  animation-delay: 3.8s;
 }
 
 .Layer_49 {
-  animation-delay: 6.8s;
+  animation-delay: 3.85s;
 }
 
 .Layer_50 {
-  animation-delay: 6.9s;
+  animation-delay: 3.9s;
 }
 
 .Layer_51 {
-  animation-delay: 7s;
+  animation-delay: 3.95s;
 }
 
 .Layer_52 {
-  animation-delay: 7.1s;
+  animation-delay: 4s;
 }
 
 .Layer_53 {
-  animation-delay: 7.2s;
+  animation-delay: 4.05s;
 }
 
 .Layer_54 {
-  animation-delay: 7.3s;
+  animation-delay: 4.1s;
 }
 
 .Layer_55 {
-  animation-delay: 7.4s;
+  animation-delay: 4.15s;
 }
 
 .Layer_56 {
-  animation-delay: 7.5s;
+  animation-delay: 4.2s;
 }
 
 .Layer_57 {
-  animation-delay: 7.6s;
+  animation-delay: 4.25s;
 }
 
 .Layer_58 {
-  animation-delay: 7.7s;
+  animation-delay: 4.3s;
 }
 
 .Layer_59 {
-  animation-delay: 7.8s;
+  animation-delay: 4.35s;
 }
 
 .Layer_60 {
-  animation-delay: 7.9s;
+  animation-delay: 4.4s;
 }
 
 .Layer_61 {
-  animation-delay: 8s;
+  animation-delay: 4.45s;
 }
 
 .Layer_62 {
-  animation-delay: 8.1s;
+  animation-delay: 4.5s;
 }
 
 .Layer_63 {
-  animation-delay: 8.2s;
+  animation-delay: 4.55s;
 }
 
 .Layer_64 {
-  animation-delay: 8.3s;
+  animation-delay: 4.6s;
 }
 
 .Layer_65 {
-  animation-delay: 8.4s;
+  animation-delay: 4.65s;
 }
 
 .Layer_66 {
-  animation-delay: 8.5s;
+  animation-delay: 4.7s;
 }
 
 .Layer_67 {
-  animation-delay: 8.6s;
+  animation-delay: 4.75s;
 }
 
 .Layer_68 {
-  animation-delay: 8.7s;
+  animation-delay: 4.8s;
 }
 
 .Layer_3_1_ {
-  animation-delay: 8.8s;
+  animation-delay: 4.85s;
 }
 
 .pin {
@@ -331,35 +331,35 @@
 }
 
 .Layer_29 {
-  animation-delay: 3.1s;
+  animation-delay: 1.9s;
 }
 
 .Layer_30 {
-  animation-delay: 3.2s;
+  animation-delay: 1.95s;
 }
 
 .Layer_31 {
-  animation-delay: 3.3s;
+  animation-delay: 2s;
 }
 
 .Layer_32 {
-  animation-delay: 3.4s;
+  animation-delay: 2.05s;
 }
 
 .Layer_33 {
-  animation-delay: 3.5s;
+  animation-delay: 2.1s;
 }
 
 .Layer_34 {
-  animation-delay: 3.6s;
+  animation-delay: 2.15s;
 }
 
 .Layer_35 {
-  animation-delay: 3.7s;
+  animation-delay: 2.2s;
 }
 
 .Layer_36 {
-  animation-delay: 3.8s;
+  animation-delay: 2.25s;
 }
 
 h1 {
@@ -389,12 +389,14 @@ body {
 
 .left {
   margin-top: 20%;
-  padding: 100px 50px;
+  padding: 50px 50px;
   width: 50%;
   border-right: solid 1px #fff;
 }
 .left img {
   height: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .copy-container {
@@ -403,10 +405,11 @@ body {
 
 .right {
   margin-top: 20%;
-  padding: 100px 50px;
+  padding: 50px 50px;
   width: 50%;
-  text-align: center;
   color: #fff;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*# sourceMappingURL=css.css.map */
