--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -19,11 +19,13 @@ body {
 
 .left {
     margin-top: 20%;
-    padding: 100px 50px;
+    padding: 50px 50px;
     width:50%; 
     border-right: solid 1px #fff;
     img {
        height: 200px; 
+       margin-left: auto;
+       margin-right: auto;
     }
 }
 
@@ -33,8 +35,9 @@ body {
 
 .right {
     margin-top: 20%;
-    padding: 100px 50px;
+    padding: 50px 50px;
     width: 50%; 
-    text-align: center;
     color: #fff;
+    margin-left: auto;
+       margin-right: auto;
 }
