--- a/sass/media-queries.css
+++ b/sass/media-queries.css
@@ -1,5 +1,47 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+
+    .flex {
+        flex-wrap: wrap;
+    }
+
+    .plane {
+        width: 50vw;
+        order: 2;
+        margin-top: 0;
+    }
+
+    .copy-container {
+        width: 100vw;
+        order: 1;
+    }
+
+    .pin {
+        width: 50vw;
+        order: 3;
+        margin-top: 0;
+    }
+
+    .left {
+        margin-top: 50px;
+        width: 100%;
+        padding: 0;
+        border-right: none;
+    }
+
+    .logo {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+
+    .right {
+        margin-top: 50px;
+        width: 100%;
+        text-align: center;
+        padding: 0;
+    }
+
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
