--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -26,6 +26,7 @@ body {
        height: 200px; 
        margin-left: auto;
        margin-right: auto;
+       display: block;
     }
 }
 
@@ -38,6 +39,6 @@ body {
     padding: 50px 50px;
     width: 50%; 
     color: #fff;
-    margin-left: auto;
-       margin-right: auto;
+   text-align: center;
+
 }
