--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -42,3 +42,19 @@ body {
    text-align: center;
 
 }
+
+.social-media-icons {
+    width: 6.5%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-top: 200px;
+}
+
+.social-media-btn {
+    height: 30px;
+    fill: #fff;
+    margin-left: auto;
+    margin-right: auto;
+    display: inline-block;
+}
