--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -1,15 +1,26 @@
 
 h1 {
-font-family: proxima-nova, sans-serif;
-font-weight: 700;
-font-style: normal;
+    font-family: proxima-nova, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+h2 {
+    font-family: proxima-nova, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 20px;
 }
 
 
-p{
-font-family: proxima-nova, sans-serif;
-font-weight: 400;
-font-style: normal;
+p {
+    font-family: proxima-nova, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    color: #fff;
+    text-align: center;
+    line-height: 22px;
 }
 
 
