--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -48,13 +48,15 @@ body {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 .social-media-btn {
     height: 30px;
     fill: #fff;
-    margin-left: auto;
-    margin-right: auto;
-    display: inline-block;
+}
+
+.small-print {
+    width: 40%;
+    margin: 0 auto;
 }
