--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,6 +13,12 @@ body {
     margin: 0 auto;
 }
 
+.bottom-container {
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
 .flex {
     display: flex;
 }
@@ -35,28 +41,24 @@ body {
 }
 
 .right {
-    margin-top: 20%;
+    margin-top: 17%;
     padding: 50px 50px;
     width: 50%; 
     color: #fff;
-   text-align: center;
-
+    text-align: center;
 }
 
 .social-media-icons {
-    width: 6.5%;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    margin-top: 100px;
+    display: flex;
+    justify-content: center;
 }
 
 .social-media-btn {
     height: 30px;
     fill: #fff;
+    padding: 6px;
 }
 
 .small-print {
-    width: 40%;
     margin: 0 auto;
 }
