--- a/sass/css.css
+++ b/sass/css.css
@@ -390,6 +390,11 @@ body {
   background-color: #3c2a66;
 }
 
+h1, h2, h3, h4, p {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   width: 100vw;
   margin: 0 auto;
@@ -412,7 +417,6 @@ body {
   border-right: solid 1px #fff;
 }
 .left img {
-  height: 200px;
   margin-left: auto;
   margin-right: auto;
   display: block;
