--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,6 +8,11 @@ body {
     background-color: $purple;
 }
 
+h1,h2,h3,h4,p {
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     width: 100vw;
     margin: 0 auto;
@@ -29,7 +34,6 @@ body {
     width:50%; 
     border-right: solid 1px #fff;
     img {
-       height: 200px; 
        margin-left: auto;
        margin-right: auto;
        display: block;
