--- a/sass/media-queries.css
+++ b/sass/media-queries.css
@@ -1,6 +1,10 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
 
+    body {
+        margin: 0;
+    }
+
     .flex {
         flex-wrap: wrap;
     }
@@ -25,18 +29,18 @@
     }
 
     .left {
-        margin-top: 50px;
+        margin-top: 30px;
         width: 100%;
         padding: 0;
         border-right: none;
     }
 
     .logo {
-        width: 70%;
+        width: 50%;
     }
 
     .right {
-        margin-top: 50px;
+        margin-top: 30px;
         width: 100%;
         text-align: center;
         padding: 0;
@@ -56,6 +60,10 @@
 @media only screen and (min-width: 601px) 
 and (max-width: 768px) {
 
+    body {
+        margin: 0;
+    }
+
     .flex {
         flex-wrap: wrap;
     }
@@ -87,7 +95,7 @@ and (max-width: 768px) {
     }
 
     .logo {
-        width: 70%;
+        width: 50%;
     }
 
     .right {
@@ -109,6 +117,10 @@ and (max-width: 768px) {
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px)
 and (max-width: 991px) {
+
+    body {
+        margin: 0;
+    }
 
 
     .flex {
@@ -139,7 +151,7 @@ and (max-width: 991px) {
     }
 
     .logo{
-        width: 100%;
+        width: 70%;
     }
 
     .right {
@@ -161,6 +173,10 @@ and (max-width: 991px) {
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 991px) 
 and (max-width: 1200px) {
+
+    body {
+        margin: 0;
+    }
 
     .plane {
         width: 25vw;
