--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,7 +6,6 @@ $purple: #3c2a66;
 
 body {
     background-color: $purple;
-    overflow: hidden;
 }
 
 h1,h2,h3,h4,p {
@@ -30,8 +29,8 @@ h1,h2,h3,h4,p {
 }
 
 .left {
-    margin-top: 20%;
-    padding: 50px 50px;
+    margin-top: 50px;
+    padding: 150px 25px;
     width:50%; 
     border-right: solid 1px #fff;
     img {
@@ -47,8 +46,8 @@ h1,h2,h3,h4,p {
 }
 
 .right {
-    margin-top: 17%;
-    padding: 50px 50px;
+    margin-top: 50px;
+    padding: 25px 25px;
     width: 50%; 
     color: #fff;
     text-align: center;
