--- a/sass/css.css
+++ b/sass/css.css
@@ -395,6 +395,14 @@ h1, h2, h3, h4, p {
   padding: 0;
 }
 
+p {
+  font-size: 15px;
+}
+
+h1 {
+  margin-bottom: 10px;
+}
+
 .container {
   width: 100vw;
   margin: 0 auto;
@@ -410,27 +418,23 @@ h1, h2, h3, h4, p {
   display: flex;
 }
 
-.left {
-  margin-top: 50px;
-  padding: 150px 25px;
-  width: 50%;
-  border-right: solid 1px #fff;
+.copy-container {
+  width: 50vw;
 }
-.left img {
+
+.logo {
+  width: 45%;
   margin-left: auto;
   margin-right: auto;
   display: block;
-  width: 100%;
-}
-
-.copy-container {
-  width: 50vw;
+  margin-bottom: 20px;
 }
 
 .right {
   margin-top: 50px;
   padding: 25px 25px;
-  width: 50%;
+  width: 70%;
+  margin: 0 auto;
   color: #fff;
   text-align: center;
 }
