--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -14,7 +14,13 @@ h1,h2,h3,h4,p {
 }
 
 p {
-    font-size: 15px;
+    font-size: 16px;
+    line-height: 28px;
+}
+
+strong {
+    font-size: 18px;
+    text-transform: uppercase;
 }
 
 h1 {
@@ -37,7 +43,7 @@ h1 {
 }
 
 .copy-container {
-    width: 50vw;
+    width: 40vw;
 }
 
 .logo {
@@ -51,10 +57,36 @@ h1 {
 .right {
     margin-top: 50px;
     padding: 25px 25px;
-    width: 70%; 
+    width: 95%; 
     margin: 0 auto;
     color: #fff;
     text-align: center;
+    p {
+        margin-bottom: 20px;
+    }
+}
+
+.register-now-btn {
+    background-color: #fff;
+    padding: 5px 10px;
+    font-size: 20px;
+    width: 30%;
+    margin: 0 auto;
+    font-family: proxima-nova, sans-serif;
+    font-weight: 400;
+    border-radius: 10px;
+    a {
+        text-decoration: none;
+    }
+
+    &:hover {
+        background-color: $purple;
+        border: 1px solid #fff;
+        transition: .4s;
+        a {
+            color: #fff;
+        }
+    }
 }
 
 .social-media-icons {
@@ -70,4 +102,7 @@ h1 {
 
 .small-print {
     margin: 0 auto;
+    p {
+        font-size: 14px;
+    }
 }
