--- a/sass/css.css
+++ b/sass/css.css
@@ -395,9 +395,32 @@ h1, h2, h3, h4, p {
   padding: 0;
 }
 
+.date-large {
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-top: 20px;
+  margin-bottom: 0;
+  font-weight: 700;
+}
+
 .container {
   width: 100vw;
   margin: 0 auto;
+}
+
+.form-container {
+  padding-top: 30px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+.form-container img {
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+.form-container a {
+  color: #fff;
 }
 
 .bottom-container {
@@ -420,7 +443,7 @@ h1, h2, h3, h4, p {
   margin-left: auto;
   margin-right: auto;
   display: block;
-  width: 100%;
+  width: 90%;
 }
 
 .copy-container {
@@ -433,6 +456,33 @@ h1, h2, h3, h4, p {
   width: 50%;
   color: #fff;
   text-align: center;
+}
+.right h1 {
+  margin-bottom: 15px;
+}
+
+.register-now-btn {
+  background-color: #fff;
+  padding: 10px 15px;
+  font-size: 20px;
+  width: 60%;
+  margin: 0 auto;
+  font-family: proxima-nova, sans-serif;
+  font-weight: 700;
+  border-radius: 5px;
+}
+.register-now-btn a {
+  color: #3c2a66;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.register-now-btn:hover {
+  background-color: #3c2a66;
+  border: 1px solid #fff;
+  transition: 0.4s;
+}
+.register-now-btn:hover a {
+  color: #fff;
 }
 
 .social-media-icons {
@@ -448,6 +498,25 @@ h1, h2, h3, h4, p {
 
 .small-print {
   margin: 0 auto;
+}
+.small-print a {
+  color: #fff;
+}
+
+.thanks-content {
+  margin-top: 30px;
+  color: #fff;
+  text-align: center;
+}
+.thanks-content h2 {
+  margin-top: 30px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 30px;
+}
+.thanks-content p {
+  margin-top: 15px;
+  color: #fff;
 }
 
 /*# sourceMappingURL=css.css.map */
