--- a/sass/css.css
+++ b/sass/css.css
@@ -1,11 +1,158 @@
+/* navigation */
 header {
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
   background-color: #3c2a66;
   height: 90px;
 }
-header .logo {
+header .header-logo {
   height: 70px;
+  padding: 10px 0;
+}
+header .flex {
+  justify-content: space-between;
 }
 
+.nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  font-family: proxima-nova, sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+.nav ul li {
+  padding: 15px 15px;
+  cursor: pointer;
+}
+.nav ul a {
+  text-decoration: none;
+  color: #fff;
+}
+.nav ul a:hover {
+  transition: 0.4s;
+}
+
+/* Style the menu link */
+.js .nav .skip {
+  position: absolute;
+  font-weight: 600;
+  right: 1em;
+  top: 0.9em;
+  overflow: hidden;
+  width: 2.9em;
+  height: 2.5em;
+  text-align: center;
+  line-height: 2.5em;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.js .nav .skip:hover {
+  transition: 0.4s;
+}
+
+/* Give the .nav ul a height when it's been opened, i.e. make it show */
+.js .nav ul.open {
+  max-height: 70em;
+}
+
+/* Hide and position the closed .nav ul */
+.js .nav ul {
+  max-height: 0;
+  overflow: hidden;
+  position: absolute;
+  right: 1em;
+  top: 3.5em;
+  transition: max-height 0.25s ease-out;
+}
+
+/* Style the list items to appear under the menu link */
+.js nav li {
+  text-align: right;
+}
+
+/* Style the list item links for ease of touch on small screens */
+.js nav li a {
+  padding: 0.5em;
+  display: block;
+}
+
+/* Style the menu link */
+.js .nav .skip {
+  position: absolute;
+  font-weight: 600;
+  right: 1.3em;
+  top: 0.9em;
+  overflow: hidden;
+  width: 2.9em;
+  height: 2.5em;
+  text-align: center;
+  line-height: 2.5em;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: din-2014, sans-serif;
+}
+.js .nav .skip:hover {
+  transition: 0.4s;
+}
+
+/* Give the .nav ul a height when it's been opened, i.e. make it show */
+.js .nav ul.open {
+  max-height: 70em;
+}
+
+/* Hide and position the closed .nav ul */
+.js .nav ul {
+  max-height: 0;
+  overflow: hidden;
+  position: absolute;
+  right: 1em;
+  top: 3.5em;
+  transition: max-height 0.25s ease-out;
+}
+
+/* Style the list items to appear under the menu link */
+.js nav li {
+  text-align: right;
+}
+
+/* Style the list item links for ease of touch on small screens */
+.js nav li a {
+  padding: 0.5em;
+  display: block;
+}
+
+/* navigation end */
+/* On screens larger than 818px, remove the menu link and display all menu items */
+@media screen and (min-width: 600px) {
+  .js .nav ul {
+    overflow: auto;
+    max-height: inherit;
+    position: static;
+    display: flex;
+    justify-content: flex-start;
+    background-color: transparent;
+  }
+
+  .js .nav li {
+    text-align: left;
+    display: inline-block;
+    border-top: 0;
+  }
+
+  .js .nav li:last-child {
+    border: 0;
+  }
+
+  .js .nav .skip {
+    display: none;
+    visibility: hidden;
+  }
+}
 .plane {
   margin-top: 250px;
   fill: #fff;
@@ -370,6 +517,11 @@ header .logo {
   animation-delay: 2.25s;
 }
 
+h1, h2, h3, h4, p {
+  margin: 0;
+  padding: 0;
+}
+
 h1 {
   font-family: proxima-nova, sans-serif;
   font-weight: 700;
@@ -394,18 +546,8 @@ p {
   line-height: 22px;
 }
 
-.grey-bg {
-  background-color: #f2efef;
-}
-
-body {
+.purple {
   background-color: #3c2a66;
-  margin: 0;
-}
-
-h1, h2, h3, h4, p {
-  margin: 0;
-  padding: 0;
 }
 
 .date-large {
@@ -418,11 +560,6 @@ h1, h2, h3, h4, p {
 
 .landing-container {
   width: 100vw;
-  margin: 0 auto;
-}
-
-.container {
-  max-width: 1170px;
   margin: 0 auto;
 }
 
@@ -445,10 +582,6 @@ h1, h2, h3, h4, p {
   max-width: 600px;
   margin: 0 auto;
   margin-top: 30px;
-}
-
-.flex {
-  display: flex;
 }
 
 .left {
@@ -535,6 +668,25 @@ h1, h2, h3, h4, p {
 .thanks-content p {
   margin-top: 15px;
   color: #fff;
+}
+
+.grey-bg {
+  background-color: #f2efef;
+}
+
+body {
+  background-color: #f2efef;
+  margin: 0;
+}
+
+.container {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0px 15px;
+}
+
+.flex {
+  display: flex;
 }
 
 /*# sourceMappingURL=css.css.map */
