--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,153 +1,23 @@
 
 @import'colors';
-@import'header';
+@import'nav';
 @import'plane';
 @import'pin';
 @import'fonts';
+@import'landing';
 @import'performance';
 
 body {
-    background-color: $purple;
+    background-color: $bggrey;
     margin: 0;
-}
-
-h1,h2,h3,h4,p {
-    margin: 0;
-    padding: 0;
-}
-
-.date-large {
-    font-size: 20px;
-    text-transform: uppercase;
-    margin-top: 20px;
-    margin-bottom: 0;
-    font-weight: 700;
-}
-
-.landing-container {
-    width: 100vw;
-    margin: 0 auto;
 }
 
 .container {
     max-width: 1170px;
     margin: 0 auto;
-}
-
-.form-container {
-    padding-top: 30px;
-    max-width: 800px;
-    margin: 0 auto;
-
-    img {
-        width: 40%;
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-    }
-
-    a {
-        color: #fff;
-    }
-}
-
-.bottom-container {
-    max-width: 600px;
-    margin: 0 auto;
-    margin-top: 30px;
+    padding: 0px 15px;
 }
 
 .flex {
     display: flex;
-}
-
-.left {
-    margin-top: 50px;
-    padding: 150px 25px;
-    width: 50%; 
-    border-right: solid 1px #fff;
-    img {
-       margin-left: auto;
-       margin-right: auto;
-       display: block;
-       width: 90%;
-    }
-}
-
-.copy-container {
-    width: 50vw;
-}
-
-.right {
-    margin-top: 50px;
-    padding: 25px 25px;
-    width: 50%; 
-    color: #fff;
-    text-align: center;
-
-    h1 {
-        margin-bottom: 15px;
-    }
-}
-
-.register-now-btn {
-    background-color: #fff;
-    padding: 10px 15px;
-    font-size: 20px;
-    width: 60%;
-    margin: 0 auto;
-    font-family: proxima-nova, sans-serif;
-    font-weight: 700;
-    border-radius: 5px;
-    a {
-        color: $purple;
-        text-transform: uppercase;
-        text-decoration: none;
-    }
-
-    &:hover {
-        background-color: $purple;
-        border: 1px solid #fff;
-        transition: .4s;
-        a {
-            color: #fff;
-        }
-    }
-}
-
-.social-media-icons {
-    display: flex;
-    justify-content: center;
-}
-
-.social-media-btn {
-    height: 30px;
-    fill: #fff;
-    padding: 6px;
-}
-
-.small-print {
-    margin: 0 auto;
-
-    a {
-        color: #fff;
-    }
-}
-
-.thanks-content {
-    margin-top: 30px;
-    color: #fff;
-    text-align: center;
-
-    h2 {
-        margin-top: 30px;
-       color: #fff;
-       font-weight: 700;
-       font-size: 30px;
-    }
-
-    p {
-        margin-top: 15px;
-        color: #fff;
-    }
 }
