--- a/sass/media-queries.css
+++ b/sass/media-queries.css
@@ -1,6 +1,30 @@
+/* On screens larger than 1200px, remove the menu link and display all menu items */
+@media screen and (min-width: 1200px) {
+  .js .nav ul {
+    overflow: auto;
+    max-height: inherit; 
+    position: static;
+    display: flex;
+    justify-content: flex-start;
+    background-color: transparent;
+  }
+  .js .nav li {
+    text-align: left;
+    display: inline-block;
+    border-top: 0;
+  }
+  .js .nav li:last-child {
+    border: 0;
+  }
+  .js .nav .skip {
+    display: none;
+    visibility: hidden;
+  }
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-	
+
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
