--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -14,7 +14,14 @@ h2 {
     font-family: proxima-nova, sans-serif;
     font-weight: 500;
     font-style: normal;
-    font-size: 20px;
+    font-size: 30px;
+}
+
+h3 {
+    font-family: proxima-nova, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 24px;
 }
 
 
