--- a/sass/performance.scss
+++ b/sass/performance.scss
@@ -1,3 +1,22 @@
-.grey-bg {
-	background-color: $bggrey;
+.perf-container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0px 15px;
+    margin-top: 200px;
+
+    h1 {
+    	text-transform: uppercase;
+    	color: $purple;
+    	font-weight: 600;
+    }
+}
+
+%section {
+	background-color: $white;
+	padding: 20px;
+	border-radius: 10px;
+}
+
+.section {
+	@extend %section;
 }
