--- a/sass/css.css
+++ b/sass/css.css
@@ -475,12 +475,18 @@ h3 {
   font-size: 24px;
 }
 
+h4 {
+  font-family: proxima-nova, sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 18px;
+}
+
 p {
   font-family: proxima-nova, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 14px;
-  color: #fff;
+  font-size: 16px;
   text-align: center;
   line-height: 22px;
 }
