--- a/sass/css.css
+++ b/sass/css.css
@@ -428,13 +428,19 @@ header .flex {
   position: absolute;
   right: 1em;
   top: 3.5em;
-  transition: max-height 0.25s ease-out;
+  transition: max-height 1s ease-out;
 }
 
 /* Style the list items to appear under the menu link */
 .js nav li {
   text-align: right;
   background-color: #3c2a66;
+}
+.js nav li:hover {
+  background-color: #f2efef;
+}
+.js nav li:hover a {
+  color: #3c2a66;
 }
 
 /* Style the list item links for ease of touch on small screens */
@@ -458,7 +464,7 @@ h1 {
   font-family: proxima-nova, sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 40px;
+  font-size: 36px;
 }
 
 h2 {
@@ -466,6 +472,7 @@ h2 {
   font-weight: 500;
   font-style: normal;
   font-size: 30px;
+  color: #3c2a66;
 }
 
 h3 {
@@ -473,13 +480,16 @@ h3 {
   font-weight: 500;
   font-style: normal;
   font-size: 24px;
+  color: #3c2a66;
 }
 
 h4 {
   font-family: proxima-nova, sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 18px;
+  font-size: 16px;
+  text-transform: uppercase;
+  color: #3c2a66;
 }
 
 p {
@@ -487,8 +497,8 @@ p {
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
-  text-align: center;
   line-height: 22px;
+  color: #999999;
 }
 
 .purple {
@@ -616,7 +626,7 @@ p {
 }
 
 .perf-container {
-  max-width: 1000px;
+  max-width: 1050px;
   margin: 0 auto;
   padding: 0px 15px;
   margin-top: 200px;
@@ -625,14 +635,92 @@ p {
   text-transform: uppercase;
   color: #3c2a66;
   font-weight: 600;
+  margin-bottom: 51px;
+}
+.perf-container h2, .perf-container h3 {
+  padding: 20px;
+}
+.perf-container p {
+  padding-top: 5px;
+}
+.perf-container hr {
+  border-width: 1px;
+  border-color: #e1e0e0;
+  border-style: solid;
+  background-color: black;
+}
+.perf-container .flex {
+  justify-content: space-between;
+}
+
+hr {
+  margin: 0;
 }
 
 .section {
   background-color: #fff;
-  padding: 20px;
   border-radius: 10px;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.05);
 }
 
+.info {
+  padding: 20px;
+}
+
+.welcome {
+  width: 55%;
+}
+
+.info {
+  padding-top: 0;
+}
+
+.enrollment {
+  width: 40%;
+}
+.enrollment .login-arg {
+  color: #00cc00;
+  padding: 28px;
+  font-weight: 600;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .perf-container {
+    margin-top: 130px;
+  }
+
+  .flex {
+    flex-wrap: wrap;
+  }
+
+  .welcome, .enrollment {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+  .perf-container {
+    margin-top: 130px;
+  }
+
+  .flex {
+    flex-wrap: wrap;
+  }
+
+  .welcome, .enrollment {
+    width: 48%;
+  }
+
+  .info {
+    width: 100%;
+  }
+
+  .enrollment .login-arg {
+    padding-top: 0;
+  }
+}
 body {
   background-color: #f2efef;
   margin: 0;
