--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -68,13 +68,19 @@
       position: absolute;
       right: 1em;
       top: 3.5em;
-      transition: max-height 0.25s ease-out;
+      transition: max-height 1s ease-out;
     }
 
     /* Style the list items to appear under the menu link */
     .js nav li {
       text-align: right;
       background-color: $purple;
+      &:hover {
+        background-color: $bggrey;
+        a {
+          color: $purple;
+        }
+      }
     }
 
     /* Style the list item links for ease of touch on small screens */
