--- a/sass/performance.scss
+++ b/sass/performance.scss
@@ -17,6 +17,10 @@
         padding: 20px;
     }
 
+    h3 {
+        padding-bottom: 0;
+    }
+
     p {
         padding-top: 5px;
     }
@@ -34,7 +38,7 @@
 }
 
 hr {
-margin: 0;
+    margin: 0;
 }
 
 %section {
@@ -57,7 +61,6 @@ margin: 0;
 
 .info {
     @extend %padding;
-    padding-top: 0;
 }
 
 .enrollment {
@@ -89,12 +92,9 @@ margin: 0;
     }
 
     h3 {
-        padding: 20px 0;
-    }
-
-    h2 {
         padding: 0;
     }
+
 }
 
 
@@ -150,8 +150,3 @@ and (max-width: 991px) {
     }
 
 }
-
-
-
-
-
