--- a/sass/css.css
+++ b/sass/css.css
@@ -619,6 +619,81 @@ p {
   color: #fff;
 }
 
+.login-bod {
+  background-color: #3c2a66;
+}
+
+.login-container {
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 50px;
+  background-color: #fff;
+  border-radius: 10px;
+}
+.login-container .login-content {
+  padding: 25px;
+}
+.login-container .login-logo {
+  height: 150px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+.login-container h1 {
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.login-container input {
+  padding: 10px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border-radius: 5px;
+  border-color: #f2efef;
+  margin-bottom: 10px;
+}
+.login-container input::placeholder {
+  font-size: 16px;
+  font-family: proxima-nova, sans-serif;
+}
+.login-container .login-btn {
+  background-color: #3c2a66;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding: 10px;
+  width: 97%;
+  font-size: 20px;
+  font-family: proxima-nova, sans-serif;
+  color: #fff;
+  border-radius: 5px;
+  margin-top: 30px;
+  cursor: pointer;
+}
+.login-container .login-btn a {
+  color: #fff;
+  text-decoration: none;
+}
+.login-container .forgot-pass {
+  margin-top: 30px;
+  text-align: center;
+  font-size: 16px;
+  font-family: proxima-nova, sans-serif;
+}
+.login-container .forgot-pass a {
+  color: #3c2a66;
+  text-decoration: none;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .login-bod {
+    margin: 15px;
+  }
+}
 .perf-container {
   max-width: 1050px;
   margin: 0 auto;
@@ -670,11 +745,6 @@ hr {
 
 .enrollment {
   width: 40%;
-}
-.enrollment .login-arg {
-  color: #00cc00;
-  padding: 28px;
-  font-weight: 600;
 }
 
 .points {
